# bcn

./: .env.aws.example  .env.local.example  .gitignore  CLAUDE.md  README.md  check_spark_config.py  docker-compose.yml  pyproject.toml
docker/hive/: Dockerfile
docker/hive/conf/: core-site.xml  hive-site.xml
docker/spark/: Dockerfile
docker/spark/conf/: spark-defaults.conf
docs/specs/: 1 - MVP.MD  2 - CodeQuality.md  3 - CodeReview.md  4 - Add Logging Architecture.md  5 - Code Quality Continuation.md  6 - Detailed stages.md  6 - Incremental Backup.md  7 - Catalog backup.md
docs/study/: BACKUP_FORMATS.md  COPY_ANALYSIS.md  COPY_DIFFERENCES.md  GLUE_VS_HIVE.md  HIVE_REGISTRATION.md  REDSHIFT_BACKUPS.md  SINGLE_FILE_FORMATS.md
src/bcn/: __init__.py  __main__.py  backup.py  backup_lock.py  backup_migrator.py  change_detector.py  cli.py  config.py  delete_file_rewriter.py  exceptions.py  garbage_collector.py  hive_client.py  iceberg_utils.py  incremental_backup.py  incremental_restore.py  integrity_checker.py  logging_config.py  manifest_rewriter.py  pit_manifest.py  repair_strategies.py  restore.py  retry.py  s3_client.py  spark_client.py  storage_connectors.py
tests/: __init__.py  conftest.py  infrastructure.py  test_backup_lock_phase3.py  test_backup_restore.py  test_cli_phase2.py  test_iceberg_utils.py  test_incremental_backup_phase1.py  test_integrity_checker_phase3.py  test_logging.py  test_phase3b_advanced.py
utils/: example-iceberg-queries.sql  setup_local_dev.sh  start-spark-sql.sh
